fix popup width when domain name too long

--- a/Extension/popup.css
+++ b/Extension/popup.css
@@ -4,6 +4,7 @@
 
 body {
   min-width: 250px;
+  width: fit-content;
 }
 .content {
   width: 100%;
